--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "json-object-mapper": "^1.6.0",
+    "ng-snotify": "^4.3.1",
     "ngx-bootstrap": "^3.1.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
