--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json-object-mapper": "^1.6.0",
     "ng-snotify": "^4.3.1",
     "ngx-bootstrap": "^3.1.1",
+    "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
